tests/declare_var/declare_var.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:1

Cannot cast `null` to `T` because null [1] is incompatible with number [2]. [incompatible-type]

   test.js:4:1
   4| null as T; // error: null ~> number
      ^^^^ [1]

References:
   test.js:4:9
   4| null as T; // error: null ~> number
              ^ [2]



Found 1 error
